# getaf

./: CMakeLists.txt  GEMINI.md  README.md  getaf.sln
.github/workflows/: build.yml
.specify/memory/: constitution.md
Config/: malformed_config.xml  test_config.xml
Database/: schema.sql
Scripts/: setup_database.py
Source/: CMakeLists.txt
Source/Framework/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  DBConnector.cpp  DBConnector.h  HTTPClient.cpp  HTTPClient.h  TestReporter.cpp  TestReporter.h
Source/GameLogic/: AIController.cpp  AIController.h  CMakeLists.txt  Character.cpp  Character.h  Collectible.cpp  Collectible.h  GameHUD.cpp  GameHUD.h
Source/Tests/: CMakeLists.txt
Source/Tests/Framework/: CMakeLists.txt  ConfigReader.cpp  DBConnector.cpp  HTTPClient.cpp  TestReporter.cpp
Source/Tests/Integration/: CSharpBridge.cs  UnitTest1.cs
docs/: free_stack_project_plan.md  prd_game_test_framework.md
specs/001-read-the-prd/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-read-the-prd/contracts/: README.md
